fixed textarea+input font and added flex-wrap for screen fitting

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html {box-sizing:border-box}
 *, *::before, *::after {box-sizing:border-box}
 
-
 body {
     background-color: rgb(80, 152, 207);
 }
@@ -10,6 +9,7 @@ form{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap:wrap;
 }
 
 .column {
@@ -32,12 +32,11 @@ label {
     padding-bottom: 7px;
 }
 
-.emptyfield {
+input, textarea {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: grey;
+    color: white;
     font-size: 11px;
     font-stretch: expanded;
-    font-style: italic;
     width: 250px;
     background-color: rgb(80, 152, 207);
     border-color: white;
@@ -59,4 +58,6 @@ label {
 
 ::placeholder {
     font-size: 15px;
+    color:gray;
+    font-style: italic;
 }
